# ePipe

./: .gitignore  Batcher.cpp  Batcher.h  CMakeLists.txt  ConcurrentPriorityQueue.h  ConcurrentQueue.h  ConcurrentUnorderedSet.h  FsMutationsBatcher.cpp  FsMutationsBatcher.h  FsMutationsTableTailer.cpp  FsMutationsTableTailer.h  MetadataTableTailer.cpp  MetadataTableTailer.h  MutationsTableTailer.cpp  MutationsTableTailer.h  NdbDataReader.cpp  NdbDataReader.h  Notifier.cpp  Notifier.h  README.md  TableTailer.cpp  TableTailer.h  Utils.h  Version.h.in  build.sh  common.h  config.ini.template  deploy.sh  docker-build.sh  main.cpp
docker/centos/: Dockerfile
docker/ubuntu/: Dockerfile
docker/ubuntu/with-rondb/: Dockerfile  README.md  mgm-client.sh  my.cnf  mysql-client.sh  rondb.cnf  start-rondb.sh
include/: AppProvenanceElastic.h  AppProvenanceElasticDataReader.h  AppProvenanceTableTailer.h  Batcher.h  Cache.h  ClusterConnectionBase.h  ConcurrentPriorityQueue.h  ConcurrentQueue.h  ConcurrentUnorderedSet.h  DatasetProjectCache.h  DatasetProjectCache2.h  DatasetTableTailer.h  ElasticSearch.h  ElasticSearchBase.h  ElasticSearchWithMetrics.h  FeaturestoreReindexer.h  FileProvenanceConstants.h  FileProvenanceConstantsRaw.h  FileProvenanceElastic.h  FileProvenanceElasticDataReader.h  FileProvenanceTableTailer.h  FsMutationsBatcher.h  FsMutationsDataReader.h  FsMutationsTableTailer.h  HopsworksOpsLogTailer.h  Logger.h  MetadataBatcher.h  MetadataLogTailer.h  MetadataReader.h  MetadataTableTailer.h  MetricsMovingCounters.h  NdbDataReader.h  NdbDataReaders.h  Notifier.h  PairCache.h  ProjectDatasetINodeCache.h  ProjectTableTailer.h  ProjectsElasticSearch.h  ProvenanceBatcher.h  ProvenanceDataReader.h  (+18 more)
include/hive/: CDSTailer.h  DBSTailer.h  IDXSTailer.h  ISCHEMATailer.h  PARTTailer.h  SDSTailer.h  SERDESTailer.h  SkewedLocTailer.h  SkewedValuesTailer.h  TBLSTailer.h
include/http/: HttpClient.h
include/http/server/: HttpConnection.h  HttpServer.h  MetricsProvider.h
include/tables/: AppProvenanceLogTable.h  DBTable.h  DBTableBase.h  DBWatchTable.h  DatasetTable.h  DocType.h  FileProvenanceLogTable.h  FileProvenanceXAttrBufferTable.h  FsMutationsLogTable.h  GroupTable.h  HopsworksOpsLogTable.h  HopsworksUserTable.h  INodeDatasetLookupTable.h  INodeTable.h  MetaFieldTable.h  MetaTableTable.h  MetaTemplateTable.h  MetaTupleTable.h  MetadataLogTable.h  ProjectTable.h  ProvenanceLogTable.h  SchemabasedMetadataTable.h  SchemalessMetadataTable.h  UserTable.h  XAttrHelper.h  XAttrTable.h
include/tables/hive/: CDSTable.h  COLUMNSV2Table.h  DBSTable.h  IDXSTable.h  ISCHEMATable.h  PARTCOLSTATSTable.h  PartitionsTable.h  SCHEMAVERSIONTable.h  SDPARAMSTable.h  SDSTable.h  SERDEPARAMSTable.h  SERDESTable.h  SkewedLocTable.h  SkewedStringsTable.h  SkewedValuesTable.h  TABCOLSTATSTable.h  TABLEPARAMSTable.h  TBLSTable.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/: AppProvenanceElastic.cpp  AppProvenanceElasticDataReader.cpp  AppProvenanceTableTailer.cpp  Batcher.cpp  ClusterConnectionBase.cpp  DatasetProjectCache.cpp  DatasetTableTailer.cpp  ElasticSearch.cpp  ElasticSearchBase.cpp  ElasticSearchWithMetrics.cpp  FeaturestoreReindexer.cpp  FileProvenanceElastic.cpp  FileProvenanceElasticDataReader.cpp  FileProvenanceTableTailer.cpp  FsMutationsBatcher.cpp  FsMutationsDataReader.cpp  FsMutationsTableTailer.cpp  HopsworksOpsLogTailer.cpp  Logger.cpp  MetadataBatcher.cpp  MetadataLogTailer.cpp  MetadataReader.cpp  MetadataTableTailer.cpp  NdbDataReader.cpp  Notifier.cpp  ProjectDatasetINodeCache.cpp  ProjectTableTailer.cpp  ProjectsElasticSearch.cpp  ProvenanceDataReader.cpp  ProvenanceElasticSearch.cpp  ProvenanceTableTailer.cpp  Recovery.cpp  Reindexer.cpp  SchemaCache.cpp  SchemabasedMetadataReader.cpp  SchemalessMetadataReader.cpp  SchemalessMetadataTailer.cpp  TableTailer.cpp  TimedRestBatcher.cpp  main.cpp
tests/hive/: metastore.sql  testcases
